<resources>
    <string name="app_name">WattMemo</string>
    <string name="finish">Close</string>
    <string name="quit">Quit</string>
    <string name="go_back">Undo</string>
    <string name="please_input_memo">Please say \"Enter\".</string>
    <string name="clear">Remove</string>
    <string name="all_clear">All Remove</string>
    <string name="input">Enter</string>
    <string name="data_not_found">Data is not available. </string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="ok">Ok</string>
    <string name="delete">Delete</string>
    <string name="zoom">Zoom Level</string>
    <string name="manual_focus">Focus</string>
    <string name="flash">Flash</string>
    <string name="flash_on">On</string>
    <string name="flash_off">Off</string>
    <string name="telephoto">telephoto</string>
    <string name="telephoto_on">On</string>
    <string name="telephoto_off">Off</string>
    <string name="capture">Shooting</string>
    <string name="create_new_memo">Write New Memo</string>
    <string name="save_changes">Saving the revised contents….</string>
    <string name="saving_new_note">Saving New Memo….</string>
    <string name="photo">Photo</string>
    <string name="video">Video</string>
    <string name="memo">Memo</string>
    <string name="file">File</string>
    <string name="toast_no_data">No data available.</string>
    <string name="voice_input_stop">voice input complete</string>
    <string name="file_delete_confirm">The file will be deleted.\nDo you want to continue ? </string>
    <string name="delete_confirm">All of Memo and Photo will be deleted.\nDo you want to continue ?</string>
    <string name="show_menu">Open Menu</string>
    <string name="hide_menu">Hide Menu</string>
    <string name="go_to_page">Go To Page</string>
    <string name="page">Page</string>
    <string name="video_start">Start</string>
    <string name="video_stop">Stop</string>
    <string name="video_pause">Pause</string>
    <string name="video_play">Play</string>
    <string name="insert_error">Unknown error (insert) is happened.</string>
    <string name="delete_error">Unknown error (delete)is happened.</string>
    <string name="update_error">Unknown error (update) is happened.</string>
    <string name="fail">Action is failed. </string>
    <string name="fail_focusing">Focusing Failure</string>
    <string name="not_network_connect">Network connection is not verified.\n Please check the network status.  </string>
    <string name="permission_denied_msg">Authorization is required to execute the App. </string>
    <string name="memo_list">Memo List</string>
    <string name="date">Date : </string>
    <string name="creator">Writer : </string>
    <string name="creator_id">ID : </string>
    <string name="select">Select </string>
    <string name="camera">Camera</string>
    <string name="thermal">Thermal</string>
    <string name="gallery">Gallery</string>
    <string name="open">Open </string>
    <string name="sort">Sort</string>
    <string name="select_sort_title">Please select sorting method. </string>
    <string name="all_memo_asc">All Memo (Ascending order)</string>
    <string name="all_memo_desc">All Memo (Descending order)</string>
    <string name="my_memo_asc">My Memo (Ascending order)</string>
    <string name="my_memo_desc">My Memo (Descending order)</string>
    <string name="delete_progress">The selected memo is being deleted. </string>
    <string name="user_not_match">Only Writer is able to change it. </string>
    <string name="prevent_access_to_app">Please access using PowerStore. </string>
    <string name="sort_all_memo">All memos</string>
    <string name="sort_my_memo">My memos</string>
    <string name="sort_asc">(Ascending order)</string>
    <string name="sort_desc">(Descending order)</string>
    <string name="gallery_saving_check">Loading files. Please wait.</string>
    <string name="file_saving">Saving file. Please wait.</string>
    <string name="refresh">Refresh</string>
    <string name="keypad">Keypad</string>
    <string name="not_enough_storage">Not enough storage.</string>
    <string name="uploading">Uploading</string>
    <string name="start_remain_upload_content1">There is an incomplete upload file.</string>
    <string name="start_remain_upload_content2">Start uploading.</string>
    <string name="quit_content1">Upload will be stopped when the app is closed.</string>
    <string name="quit_content2">Upload will resume when re-launched.</string>
    <string name="remain_upload_file">There is an incomplete upload file.</string>
    <string name="zoom_level_1">Zoom Level 1</string>
    <string name="zoom_level_2">Zoom Level 2</string>
    <string name="zoom_level_3">Zoom Level 3</string>
    <string name="zoom_level_4">Zoom Level 4</string>
    <string name="zoom_level_5">Zoom Level 5</string>
    <string name="available_record_time">Available Record Time</string>
    <string name="mute">Mute</string>
    <string name="volume1">Volume 1</string>
    <string name="volume2">Volume 2</string>
    <string name="volume3">Volume 3</string>
    <string name="volume4">Volume 4</string>
    <string name="volume5">Volume 5</string>
    <string name="volume6">Volume 6</string>
    <string name="volume7">Volume 7</string>
    <string name="volume8">Volume 8</string>
    <string name="volume9">Volume 9</string>
    <string name="volume10">Volume 10</string>
    <string name="hd">HD</string>
    <string name="fhd">FHD</string>
    <string name="deleted_memo">A selected memo is deleted mome.</string>
    <string name="deleted_file">Deleted file.</string>
    <string name="invalid_sftp_url">Invalid sftp url</string>
    <string name="ask_administrator">Init Error ask administrator</string>
    <string name="fail_init_setting">Init Fail</string>
    <string name="bad_internet_connection">bad internet connection</string>
    <string name="date_time_setting_popup_msg">The date &amp; time have not been set.\nPlease set the time to use WattTalk.\n\n1. Automatic date &amp; time (requires activation)\n2. Automatic time zone (requires activation)\n\nDo you want to move to the setting screen?</string>
    <string name="setting">Setting</string>
    <string name="exit">Close</string>
</resources>

