<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:contentDescription="hf_no_number"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#F6F6F6"
    tools:context=".activity.ExoVideoPlayActivity">

    <com.google.android.exoplayer2.ui.PlayerView
        android:id="@+id/player_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="hf_no_number"
        app:use_controller="false"
        />



    <!--뒤로-->
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/bt_manual_focus"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="3dp"
        app:layout_constraintStart_toStartOf="@id/player_view"
        app:layout_constraintTop_toTopOf="@id/player_view">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/icon_finish"
            android:gravity="center" />

        <TextView
            android:id="@+id/tv_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="5dp"
            android:contentDescription="hf_no_number"
            android:text="@string/go_back"
            android:textColor="@android:color/white"
            android:textSize="18px"
            android:textStyle="bold" />
    </LinearLayout>


    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="810dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginTop="410dp"
        android:max="1000"
        android:progressTint="#FFFFFF"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />


    <TextView
        android:id="@+id/tv_past_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        app:layout_constraintStart_toStartOf="@+id/progressBar"
        app:layout_constraintBottom_toTopOf="@+id/progressBar"
        android:text="00:00"
        android:textSize="20sp"
        android:textColor="@color/white"
        />

    <TextView
        android:id="@+id/tv_total_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="@+id/progressBar"
        app:layout_constraintBottom_toTopOf="@+id/progressBar"
        android:layout_marginEnd="5dp"
        android:text="00:00"
        android:textSize="20sp"
        android:textColor="@color/white"
        />



    <LinearLayout
        android:id="@+id/ll_blur"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#4D000000"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:orientation="vertical"
        >



        <LinearLayout
            android:orientation="vertical"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <ImageView
                android:id="@+id/icon_play"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:src="@drawable/ic_play"
                />
            <ImageView
                android:visibility="gone"
                android:id="@+id/icon_pause"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:src="@drawable/ic_pause"
                />
            <ImageView
                android:visibility="gone"
                android:id="@+id/icon_stop"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:src="@drawable/ic_stop"
                />


        </LinearLayout>
    </LinearLayout>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginStart="23dp"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal"
        >

<!--        <TextView-->
<!--            android:id="@+id/rewind"-->
<!--            android:layout_width="90dp"-->
<!--            android:layout_height="40dp"-->
<!--            android:layout_marginStart="5dp"-->
<!--            android:background="@drawable/btn_bg_round"-->
<!--            android:fontFamily="@font/roboto_bold"-->
<!--            android:gravity="center"-->
<!--            android:text="@string/video_rewind"-->
<!--            android:textColor="#FFFFFF"-->
<!--            android:textSize="20sp"-->
<!--            android:textStyle="bold"-->
<!--            />-->

        <TextView
            android:id="@+id/play_btn"
            android:layout_width="90dp"
            android:layout_height="40dp"
            android:layout_marginStart="5dp"
            android:background="@drawable/btn_bg_round"
            android:fontFamily="@font/roboto_bold"
            android:gravity="center"
            android:text="@string/video_play"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/stop_btn"
            android:layout_width="90dp"
            android:layout_height="40dp"
            android:layout_marginStart="5dp"
            android:background="@drawable/btn_bg_round"
            android:fontFamily="@font/roboto_bold"
            android:gravity="center"
            android:text="@string/video_stop"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            android:textStyle="bold"
            android:visibility="gone"
            />

        <TextView
            android:id="@+id/pause_btn"
            android:layout_width="90dp"
            android:layout_height="40dp"
            android:layout_marginStart="5dp"
            android:background="@drawable/btn_bg_round"
            android:fontFamily="@font/roboto_bold"
            android:gravity="center"
            android:text="@string/video_pause"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            android:textStyle="bold"
            android:visibility="gone"
            />

<!--        <TextView-->
<!--            android:id="@+id/skip"-->
<!--            android:layout_width="90dp"-->
<!--            android:layout_height="40dp"-->
<!--            android:layout_marginStart="5dp"-->
<!--            android:background="@drawable/btn_bg_round"-->
<!--            android:fontFamily="@font/roboto_bold"-->
<!--            android:gravity="center"-->
<!--            android:text="@string/video_skip"-->
<!--            android:textColor="#FFFFFF"-->
<!--            android:textSize="20sp"-->
<!--            android:textStyle="bold"-->
<!--            />-->


    </LinearLayout>





    <TextView
        android:id="@+id/volume1"
        android:layout_width="1dp"
        android:layout_height="1dp"
        android:text="@string/volume1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        />
    <TextView
        android:id="@+id/volume2"
        android:layout_width="1dp"
        android:layout_height="1dp"
        android:text="@string/volume2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        />
    <TextView
        android:id="@+id/volume3"
        android:layout_width="1dp"
        android:layout_height="1dp"
        android:text="@string/volume3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        />
    <TextView
        android:id="@+id/volume4"
        android:layout_width="1dp"
        android:layout_height="1dp"
        android:text="@string/volume4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        />
    <TextView
        android:id="@+id/volume5"
        android:layout_width="1dp"
        android:layout_height="1dp"
        android:text="@string/volume5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        />
    <TextView
        android:id="@+id/volume6"
        android:layout_width="1dp"
        android:layout_height="1dp"
        android:text="@string/volume6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        />
    <TextView
        android:id="@+id/volume7"
        android:layout_width="1dp"
        android:layout_height="1dp"
        android:text="@string/volume7"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        />
    <TextView
        android:id="@+id/volume8"
        android:layout_width="1dp"
        android:layout_height="1dp"
        android:text="@string/volume8"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        />
    <TextView
        android:id="@+id/volume9"
        android:layout_width="1dp"
        android:layout_height="1dp"
        android:text="@string/volume9"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        />
    <TextView
        android:id="@+id/volume10"
        android:layout_width="1dp"
        android:layout_height="1dp"
        android:text="@string/volume10"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        />
    <TextView
        android:id="@+id/mute"
        android:layout_width="1dp"
        android:layout_height="1dp"
        android:text="@string/mute"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        />


</androidx.constraintlayout.widget.ConstraintLayout>