<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="492dp"
        android:layout_height="324dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:background="@color/white"
        >

        <ImageView
            android:layout_width="66dp"
            android:layout_height="66dp"
            android:layout_marginTop="43dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:src="@drawable/ic_upload"
            />

        <TextView
            android:id="@+id/tv_remain_upload_content1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="129dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:textSize="23sp"
            android:textColor="@color/black"
            android:text="@string/start_remain_upload_content1"
            android:textAlignment="center"
            />

        <TextView
            android:id="@+id/tv_remain_upload_content2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_remain_upload_content1"
            android:textSize="23sp"
            android:textColor="@color/black"
            android:text="@string/start_remain_upload_content2"
            android:textAlignment="center"
            />

        <TextView
            android:id="@+id/tv_ok"
            android:layout_width="144dp"
            android:layout_height="42dp"
            android:layout_marginBottom="52dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:background="#004EA7"
            android:text="@string/ok"
            android:textColor="@color/white"
            android:textSize="23sp"
            android:gravity="center"
            />


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>